syntax = "proto3";

option go_package = "web/proto";

message VM {
  string name = 1;
  string host = 2;
  repeated string ipv4 = 3;
  uint32 cpus = 4;
  uint32 ram = 5;
  string disk = 6;
  double uptime = 7;
  repeated string networks = 8;
  repeated string taps = 9;
  repeated Capture captures = 10;
  bool do_not_boot = 11 [json_name="dnb"];
  string screenshot = 12;
  bool running = 13;
  bool busy = 14;
  string experiment = 15;
  string state = 16;
  repeated string tags = 17;
  bool cc_active = 18;
  bool external = 19;

  string delayed_start = 20 [json_name="delayed_start"];
}

message VMList {
  repeated VM vms = 1;
  uint32 total = 2;
}

message Capture {
  string vm = 1;
  uint32 interface = 2;
  string filepath = 3;
}

message CaptureList {
  repeated Capture captures = 1;
}

message SnapshotList {
  repeated string snapshots = 1;
}

message VMRedeployRequest {
  string name = 1;
  uint32 cpus = 2;
  uint32 ram = 3;
  string disk = 4;
  bool injects = 5;
}

message UpdateVMRequest {
  string exp = 1;
  string name = 2;
  uint32 cpus = 3;
  uint32 ram = 4;
  string disk = 5;

  oneof boot {
    bool do_not_boot = 6 [json_name="dnb"];
  }

  VMInterface interface = 7;

  oneof cluster_host {
    string host = 8;
  }
}

message UpdateVMRequestList {
  repeated UpdateVMRequest vms = 1;
  uint32 total = 2;
}

message VMInterface {
  uint32 index = 1;
  string vlan = 2;
}

message MemorySnapshotRequest {
	string filename = 1;
}

message MemorySnapshotResponse {
	string disk = 1;
	VM vm = 2;
}

message CaptureSubnetRequest {
  string subnet = 1;
  repeated string vms = 2;
}

message VMNameList {
  repeated string vms = 1;
}